Get a basic version working

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <title>Pusher and Elm</title>
 
-    <script type="text/javascript" src="http://elm-lang.org/elm-runtime.js"></script>
-    <script type="text/javascript" src="build/App.js"></script>
-    <script type="text/javascript" src="app.js"></script>
   </head>
   <body>
-    <h1>Pusher Testing</h1>
+    <script src="//js.pusher.com/3.0/pusher.min.js"></script>
+
+    <script type="text/javascript" src="build/App.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
 
